Windows: Ensure clipboard is flushed out before QGuiApplication is destroyed.

Otherwise, OleFlushClipboard() might query the data again which causes
problems for QMimeData-derived classes using QPixmap/QImage.

Task-number: QTBUG-36958

Change-Id: I89e58eeb64bd3481e89ad789f310f19ddb4604a2
Reviewed-by: Joerg Bornemann <joerg.bornemann@digia.com>

cregit: 42afcfd8ce2fec86836d2414ee1e6d88f42613f3 https://github.com/qt/qtbase/commit/42afcfd8ce2fec86836d2414ee1e6d88f42613f3